objects/ASI_GiftBox_Notification_User__c.object
<CustomObject>
    <fields>
        <fullName>ASI_GiftBox_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gift_Box_Notification_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GiftBox_Notification_Users1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HR User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GiftBox_Notification_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MKT_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MKT User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GiftBox_Notification_Users2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Gift Box Notification User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Finance_User__c</columns>
        <columns>ASI_GiftBox_Sales_Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Notification List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gift Box Notification Users</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_POSM_Notification_User</fullName>
        <active>true</active>
        <label>ASI CRM POSM Notification User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>